Fix checkbox-button and radio-button gap

--- a/packages/theme-chalk/src/radio-group.scss
+++ b/packages/theme-chalk/src/radio-group.scss
@@ -5,4 +5,5 @@
   display: inline-block;
   line-height: 1;
   vertical-align: middle;
+  font-size: 0;
 }
