--- a/packages/theme-chalk/src/radio.scss
+++ b/packages/theme-chalk/src/radio.scss
@@ -12,6 +12,7 @@
   display: inline-block;
   white-space: nowrap;
   outline: none;
+  font-size: $--font-size-base;
   @include utils-user-select(none);
 
   @include when(bordered) {
